@@ -6,6 +6,7 @@ Revision history for Rex
  [BUG FIXES]
 
  [DOCUMENTATION]
+ - Document feature flags
 
  [ENHANCEMENTS]
 
